# vectalab

./: .gitignore  LICENSE  README.md  create_test_image.py  debug_potrace.py  pyproject.toml  requirements.txt  tune_parameters.py  verify_fidelity.py  vmagic.py
docs/: MODELS.md  README.md  algorithm.md  api.md  architecture_and_pipelines.md  benchmarks.md  cli.md  commands_and_algorithms.md  examples.md  modal_setup.md
examples/: hifi_example.py
logs/: 2024-11-29-hifi-vectorization-log.md  2025-11-29-11-53-beastmode-chatmode-log.md  2025-11-29-15-57-beastmode-chatmode-log.md  2025-11-29-16-10-beastmode-chatmode-log.md  2025-11-29-17-15-beastmode-chatmode-log.md  2025-11-29-17-32-beastmode-chatmode-log.md  2025-11-29-17-45-80-20-optimizations-log.md  2025-11-29-18-15-beastmode-chatmode-log.md  2025-11-29-19-30-sota-optimization-log.md  2025-11-29-21-30-cleanup-vmagic-log.md  2025-11-29-modal-docs-log.md  2025-11-29-modal-integration-log.md  2025-11-29-modal-optimization-fix-log.md  2025-11-29-modal-predownload-log.md  2025-11-30-12-00-beastmode-chatmode-log.md  2025-11-30-14-25-sota-full-run-log.md  2025-11-30-14-40-sota-optimization-log.md  2025-11-30-14-45-analysis-log.md  2025-11-30-add-benchmark-description-log.md  2025-11-30-apply-tuning-findings-log.md  2025-11-30-auto-mode-implementation-log.md  2025-11-30-benchmark-verification-v2-log.md  2025-11-30-centralized-auto-logic-log.md  2025-11-30-enable-custom-input-dir-log.md  2025-11-30-enhanced-auto-metrics-log.md  2025-11-30-fix-geometric-icon-background-log.md  2025-11-30-logo-enhancement-log.md  2025-11-30-logo-optimization-log.md  2025-11-30-mps-detection-log.md  2025-11-30-port-smart-auto-mode-log.md  2025-11-30-promote-benchmark-command-log.md  2025-11-30-update-readme-benchmark-log.md  2025-11-30-verify-readme-log.md  2025-12-01-12-00-beastmode-chatmode-log.md  2025-12-01-12-01-beastmode-chatmode-log.md  2025-12-01-12-06-beastmode-chatmode-log.md  2025-12-01-12-15-beastmode-chatmode-log.md  2025-12-01-12-23-architecture-and-pipelines-log.md  (+9 more)
scripts/: README.md  (+28 more)
(+52 files in other folders)
